<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="14dp"
    android:paddingBottom="10dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="90dp">
    </View>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/detail_title"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="4dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/yellowAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="90dp"
        android:isScrollContainer="true">

        <!-- Task name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_name"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskName"
                android:layout_marginHorizontal="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_description"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task date occurrence -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_date_occurring"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskOccurringDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task status -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_status"
                android:layout_marginEnd="4dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_category"
                android:layout_marginEnd="4dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task period -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_period"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task frequency -->
       <LinearLayout
           android:id="@+id/recurringFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
           android:layout_marginBottom="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_recurring"
                android:layout_marginEnd="4dp"
                android:textSize="18sp"/>
           <TextView
               android:text="@string/detail_recurring_each"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="4dp"
               android:textSize="18sp"/>
           <TextView
                android:id="@+id/tvTaskRecurringNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskRecurringUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_time"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_date_dash"
                android:layout_marginHorizontal="3dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvTaskEndTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Task difficulty -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_difficulty"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Task importance -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_importance"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvTaskImportance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:textSize="18sp"/>
        </LinearLayout>

        <!-- Edit task button -->
        <Button
            android:id="@+id/btnEditTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/edit"/>
    </LinearLayout>
</FrameLayout>
