<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="90dp" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvAddTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/add_task_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/yellowAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Task name -->
            <EditText
                android:id="@+id/etTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="4dp"/>

            <!-- Task description -->
            <EditText
                android:id="@+id/etTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="4dp"/>

            <LinearLayout
                android:id="@+id/categoryFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:gravity="center">
                <!-- Task category -->
                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="145dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:layout_marginEnd="10dp"/>
                <!-- Add category -->
                <Button
                    android:id="@+id/btnSaveCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/add_category"
                    android:backgroundTint="@color/blueAccent"/>
            </LinearLayout>

            <!-- Task status -->
            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:spinnerMode="dropdown"
                android:layout_marginHorizontal="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">
                <!-- Task start date -->
                <EditText
                    android:id="@+id/etStartDate"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="@string/task_start"
                    android:textAlignment="center"
                    android:layout_marginEnd="20dp"/>
                <!-- Task end date -->
                <EditText
                    android:id="@+id/etEndDate"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textAlignment="center"
                    android:hint="@string/task_end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">
                <!-- Task start time -->
                <EditText
                    android:id="@+id/etStartTime"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="@string/task_start_time"
                    android:textAlignment="center"
                    android:layout_marginEnd="20dp"/>
                <!-- Task end time -->
                <EditText
                    android:id="@+id/etEndTime"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textAlignment="center"
                    android:hint="@string/task_end_time"/>
            </LinearLayout>

            <!-- Task frequency -->
            <RadioGroup
                android:id="@+id/rgFrequency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp">
                <RadioButton
                    android:id="@+id/rbOneTime"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="17dp"
                    android:text="@string/task_not_repeatable"/>
                <RadioButton
                    android:id="@+id/rbRepeat"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/task_repeatable" />
            </RadioGroup>

            <!-- Recurring task -->
            <LinearLayout
                android:id="@+id/layoutRecurringOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal">
                <!-- Task interval -->
                <EditText
                    android:id="@+id/etReccuringNumber"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="17dp"
                    android:textAlignment="center"
                    android:hint="@string/task_recurring_number"/>
                <!-- Task unit -->
                <Spinner
                    android:id="@+id/spinnerRecurringUnit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <!-- Task difficulty -->
            <Spinner
                android:id="@+id/spinnerDifficulty"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:spinnerMode="dropdown"
                android:layout_marginHorizontal="4dp"/>

            <!-- Task importance -->
            <Spinner
                android:id="@+id/spinnerImportance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:spinnerMode="dropdown"
                android:layout_marginHorizontal="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">
                <!-- Remove task button -->
                <Button
                    android:id="@+id/btnRemoveTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/blueAccent"
                    android:text="@string/remove_task"
                    android:visibility="gone"/>
                <!-- Add task button -->
                <Button
                    android:id="@+id/btnSaveTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blueAccent"
                    android:text="@string/save_task" />
            </LinearLayout>

    </LinearLayout>
    </ScrollView>
</FrameLayout>